--- a/ecclesia/lectio/mateo/mateo7.html
+++ b/ecclesia/lectio/mateo/mateo7.html
@@ -797,7 +797,7 @@ Porque todo el que pide, recibe; y el que busca, halla; y al que llama, se le ab
 ¿O qué hombre hay entre vosotros que si su hijo le pide pan, le dará una piedra?<br> 
 ¿O si le pide un pez, le dará una serpiente?<br> 
 Pues si vosotros, siendo malos, sabéis dar cosas buenas a vuestros hijos,<br> 
-¿cuánto más vuestro Padre celestial dará cosas buenas a los que le pidan?<br>*(Nota: esta versión suele coincidir con la Reina-Valera en estructura)* <br><br><p>“Petite, et accipietis; quaerite, et invenietis; pulsate, et aperietur vobis.
+¿cuánto más vuestro Padre celestial dará cosas buenas a los que le pidan?<br><br>(Nota: esta versión suele coincidir con la Reina-Valera en estructura)<br> <br><br><p>“Petite, et accipietis; quaerite, et invenietis; pulsate, et aperietur vobis.
 Omne enim, petentibus, accipiet; qui quaerit, invenit; pulsanti aperietur.
 Quis est ex vobis vir, qui si filium suum pultam panem petierit, dent ei lapidem?
 Aut si piscem petierit, dent ei serpentes?
@@ -1033,10 +1033,7 @@ Análisis teológico más profundo en el artículo de la [Revista Bíblica sobre
         <li>
           <details class="select">
             <summary>Variaciones en el Texto</summary>
-            <p>
-        Perfecto. Te propongo incluir un salto de línea HTML `<br>` en cada quiebre de línea del comentario sobre las variaciones textuales de Mateo 7:12. A continuación te dejo un ejemplo de cómo quedaría el comentario con los saltos de línea explícitos para pegar en HTML. He incluido un análisis breve de variaciones entre varias traducciones; si quieres que cubra versiones específicas en tu texto final, dímelo y lo adapto.
-
-Comentario sobre variaciones textuales de Mateo 7:12 (con <br> en cada salto de línea):
+            <p>Variaciones textuales de Mateo 7:12  <br> 
 - Mateo 7:12 dice: “Así que, todas las cosas que queráis que los hombres hagan con vosotros, así haced vosotros con ellos; porque esto es la ley y los profetas.” <br>
 - Variaciones textuales relevantes entre traducciones reconocidas: <br>
 - Reina-Valera 1960 (RVR1960): “Así que, todas las cosas que queráis que los hombres hagan con vosotros, hacedlo también vosotros con ellos; porque esto es la ley y los profetas.” <br>
@@ -1048,11 +1045,6 @@ Comentario sobre variaciones textuales de Mateo 7:12 (con <br> en cada salto de 
 - En algunas versiones, el mandato se presenta de forma más explícita (haced) frente a una forma de cortesía/condicional (hagan, hacédselas). <br>
 - El sentido general permanece: el versículo resume la ética de la reciprocidad, vinculada con la Ley y los Profetas, aunque la redacción varía ligeramente en tono y énfasis. <br>
 
-Notas para pegar en HTML:
-- Cada salto de línea se ha marcado con un `<br>` al final de cada línea. <br>
-- Si pretendes mantener las diferencias entre versiones en un solo bloque, podemos convertirlo en una lista con guiones y añadir `<br>` después de cada línea dentro de cada versión. <br>
-
-¿Quieres que te entregue un bloque completo para las versiones específicas que más uses (RVR1960, NVI, Jerusalén, LBLA, Interlineal) en un solo contenedor, para pegar tal cual en tu HTML? Si me dices qué versiones necesitas exactamente, te lo formateo con el `<br>` en cada salto tal como lo pides.
             </p>
           </details>
         </li>
@@ -1060,22 +1052,13 @@ Notas para pegar en HTML:
         <li>
           <details class="select">
             <summary>Paralelos</summary>
-            <p>
-             Sí, la perícopa de Mateo 7:12 tiene varios textos y temas paralelos que la contextualizan en la ética de la reciprocidad y la influencia de la Ley y los Profetas. A continuación te dejo un resumen conciso con saltos de línea HTML `<br>` en cada salto de línea para pegar en HTML.
-
-Perícopa y temas paralelos (con <br> en cada salto de línea):
+            <p>Mateo 7:12 tiene varios textos y temas paralelos que la contextualizan en la ética de la reciprocidad y la influencia de la Ley y los Profetas.  <br><br>
 - Contexto central: la Regla de Oro, que resume la ética de trato hacia los demás basada en el trato que uno desea recibir.<br>
 - Relación con la Ley y los Profetas: se ha interpretado como una síntesis o conclusión de la enseñanza mosaica, destacando la importancia de la justicia práctica.<br>
 - Reciprocidad y ética práctica: enfatiza acciones concretas hacia los demás más que meras actitudes internas.<br>
 - Enlaces con las enseñanzas de Jesús sobre la humildad y la misericordia: se puede leer junto a pasajes donde se llama a la reconciliación, al perdón y a la generosidad.<br>
 - Paralelos Textuales en traducciones: aunque la redacción varía, el sentido de "tratar a los demás" como base de la ética es común en RVR, NVI, BJ, LBLA y otras.<br>
 - Relación con la ética social en el Nuevo Testamento: se puede conectar con pasajes de Mateo 5-7 que articulan justicia, misericordia y rectitud interior y exterior.<br>
-
-Notas para pegar en HTML:
-- Cada salto de línea se ha marcado con un `<br>` al final de cada línea. <br>
-- Si quieres, puedo convertir este bloque en una lista o en secciones separadas por versión o por tema para facilitar la maquetación en tu HTML. <br>
-
-¿Quieres que te entregue una versión más detallada, por ejemplo dividiendo por temas (Reciprocidad, Ley y Profetas, Justicia práctica) o y/o añadir referencias a pasajes paralelos específicos (Mateo 5:7, Mateo 6:14-15, Lucas 6:31, etc.)? dime qué formato prefieres y lo adapto con el `<br>` en cada salto de línea tal como lo necesitas.
             </p>
           </details>
         </li>
@@ -1084,9 +1067,7 @@ Notas para pegar en HTML:
           <details class="select">
             <summary>Temas</summary>
             <p>
-             Claro. Los temas teológicos más relevantes de la perícopa de Mateo 7:12 (la Regla de Oro) incluyen:
-
-- Ética de la reciprocidad divina y humana<br>
+   - Ética de la reciprocidad divina y humana<br>
 - Justicia práctica vs. mera piedad externa<br>
 - Integridad del mandato: acción concreta hacia los demás<br>
 - Cumplimiento de la Ley y los Profetas como síntesis ética<br>
@@ -1102,11 +1083,7 @@ Notas para pegar en HTML:
         <li>
           <details class="select">
             <summary>Patrística</summary>
-            <p>
-          Sí. Los Padres de la Iglesia comentaron y trabajaron la perícopa de Mateo 7:12 (la Regla de Oro) desde varias perspectivas teológicas y pastorales. 
-
- Padres de la Iglesia y sus enfoques (con <br> en cada salto de línea):
-- Orígenes y lectura moral: enfatizan la Regla de Oro como guía para la ética cristiana, vinculando las acciones hacia los demás con la justicia y la misericordia. <br>
+            <p> Orígenes y lectura moral: enfatizan la Regla de Oro como guía para la ética cristiana, vinculando las acciones hacia los demás con la justicia y la misericordia. <br>
 - Tertuliano y la vida ética del cristiano: subrayan la importancia de la integridad y la coherencia entre creencias y acciones concretas hacia el prójimo. <br>
 - San Clemente de Alejandría y la universalidad de la norma: destacan que la regla se aplica a todos y a todas las relaciones dentro de la comunidad. <br>
 - San Agustín y la Ley y los Profetas: interpretan la Regla de Oro como una síntesis de la ética del Antiguo y Nuevo Testamento, que orienta la caridad y la rectitud. <br>
@@ -1125,7 +1102,7 @@ Notas para pegar en HTML:
           <details class="select">
             <summary>Magisterio</summary>
             <p>
-      El Magisterio de la Iglesia aborda los temas de la perícopa de Mateo 7:12 (la Regla de Oro) enfocándose en la ética de la reciprocidad, la justicia, la caridad y la rectitud interior y exterior.
+      El Magisterio de la Iglesia aborda los temas de la perícopa de Mateo 7:12 (la Regla de Oro) enfocándose en la ética de la reciprocidad, la justicia, la caridad y la rectitud interior y exterior. <br><br>
 
 Magisterio de la Iglesia y temas clave  <br> 
 - Regla de Oro como síntesis de la Ley: llama a la conducta hacia los demás basada en el criterio de lo que se quiere recibir. <br>
@@ -1145,10 +1122,12 @@ Magisterio de la Iglesia y temas clave  <br>
         <li>
           <details class="select">
             <summary>Metanoia</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+          <ol>
+            <li>Sentido de unidad entre los deseos últimos de la personas</li>
+            <li>Criterio de acción básico, la coherencia y solidaridad</li>
+            <li>Este criterio es fundamental para la pastoral, enseñar como quisiéramos aprender; un método personal y centrado en Cristo. Para las visitas, respeto, solidaridad, empatía y el Señor en el centro.</li>
+        
+          </ol>
           </details>
         </li>
         <!--++++++++++++++++++++++++++++++++++++++++++ -->
@@ -1191,9 +1170,38 @@ Magisterio de la Iglesia y temas clave  <br>
         <li>
           <details class="select">
             <summary>Variaciones en el Texto</summary>
-            <p>
-              <br />
-              <br />
+            <p>Mateo 7,13-14 en distintas traducciones
+
+Biblia de Jerusalén (BJ): <br>
+«Entrad por la entrada estrecha; <br>porque ancha es la entrada y espacioso el camino que lleva a la perdición, <br>y muchos son los que entran por ella. <br>¡Qué estrecha la entrada y qué angosto el camino que lleva a la vida! <br>Y pocos son los que lo encuentran.» <br>
+
+<br>
+
+Vulgata (latín): <br>
+«Intrate per angustam portam: <br>quia lata porta, et spatiosa via est, <br>quæ ducit ad perditionem, <br>et multi sunt qui intrant per eam. <br>Quam angusta porta, et arcta via est, <br>quæ ducit ad vitam: <br>et pauci sunt qui inveniunt eam!» <br>
+
+<br>
+
+Nueva Versión Internacional (NVI): <br>
+«Entren por la puerta estrecha, <br>porque es ancha la puerta y amplio el camino que conduce a la destrucción, <br>y muchos entran por ella. <br>Pero estrecha es la puerta y angosto el camino que conduce a la vida, <br>y son pocos los que la encuentran.» <br>
+
+<br>
+
+Biblia de las Américas (LBLA): <br>
+«Entrad por la puerta estrecha; <br>porque ancha es la puerta y amplia la senda que lleva a la perdición, <br>y muchos son los que entran por ella. <br>Porque estrecha es la puerta y angosta la senda que lleva a la vida, <br>y pocos son los que la hallan.» <br>
+
+<br>
+
+Interlineal griego-español (Nestle-Aland): <br>
+«Entrad por la puerta estrecha; <br>porque ancha es la puerta y espacioso el camino que lleva a la destrucción, <br>y muchos son los que entran por ella. <br>Porque estrecha es la puerta y angosto el camino que lleva a la vida, <br>y pocos son los que la hallan.» <br>
+
+<br>
+ Observa que las diferencias son matices en las palabras:<br>
+
+<br> “entrada / puerta”<br>
+<br> “espacioso / amplio”<br>
+<br> “angosto / estrecho”<br>
+<br> “pocos los que la encuentran / hallan”
             </p>
           </details>
         </li>
@@ -1201,10 +1209,25 @@ Magisterio de la Iglesia y temas clave  <br>
         <li>
           <details class="select">
             <summary>Paralelos</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+            <p>Textos paralelos directos <br>
+
+Evangelio de Lucas 13,23-24<br>
+«Uno le preguntó: “Señor, ¿son pocos los que se salvan?” <br>Él les dijo: “Esforzaos a entrar por la puerta estrecha; <br>porque os digo que muchos intentarán entrar, y no podrán.”» <br>
+
+<br>
+
+Temas y textos afines en la Escritura<br>
+
+<br> Camino de vida y camino de muerte: Deuteronomio 30,15-19 → «Mira, yo pongo hoy delante de ti la vida y el bien, la muerte y el mal… escoge, pues, la vida». <br>
+<br> Dos caminos: Salmo 1,6 → «Porque el Señor conoce el camino de los justos, mas la senda de los malos perecerá». <br>
+<br> Dos puertas / dos destinos: Jeremías 21,8 → «He aquí pongo delante de vosotros camino de vida y camino de muerte». <br>
+<br> Camino de santidad: Isaías 35,8 → «Habrá allí una calzada y camino, que se llamará Camino de Santidad; ningún impuro pasará por él». <br>
+<br> El Buen Pastor y la puerta: Juan 10,7-9 → «Yo soy la puerta; el que por mí entrare, será salvo; entrará y saldrá, y hallará pastos». <br>
+<br> La “estrechez” del seguimiento de Cristo: Mateo 16,24 → «Si alguno quiere venir en pos de mí, niéguese a sí mismo, tome su cruz y sígame». <br>
+<br> Dos caminos en la Didajé (siglo I): Cap. 1-2 → «Hay dos caminos: uno de vida y otro de muerte; pero hay gran diferencia entre los dos caminos». <br>
+
+<br>
+En resumen: este pasaje de Mateo no está aislado, sino que forma parte de un tema bíblico recurrente: la elección entre dos caminos —uno fácil y ancho que lleva a la perdición, y otro estrecho y exigente que conduce a la vida.            </p>
           </details>
         </li>
         <!--++++++++++++++++++++++++++++++++++++++++++ -->
@@ -1212,9 +1235,51 @@ Magisterio de la Iglesia y temas clave  <br>
           <details class="select">
             <summary>Temas</summary>
             <p>
-              <br />
-              <br />
-            </p>
+<ul>
+  <li><b>La elección entre dos caminos</b>
+    <ul>
+      <li>El ser humano está llamado a decidir entre vida y perdición.</li>
+      <li>Referencias: Dt 30,15-19; Jer 21,8; Sal 1,6.</li>
+      <li>Paralelo: Lc 13,23-24 (“Esforzaos a entrar por la puerta estrecha”).</li>
+    </ul>
+  </li> <br>
+
+  <li><b>La puerta estrecha como símbolo del discipulado</b>
+    <ul>
+      <li>El seguimiento de Cristo exige renuncia, esfuerzo y fidelidad.</li>
+      <li>No es el camino de la multitud, sino de los que deciden seguir a Jesús con radicalidad.</li>
+      <li>Referencias: Mt 16,24 (“Si alguno quiere venir en pos de mí, niéguese a sí mismo…”).</li>
+      <li>Paralelo: Mt 5,10-12 (bienaventurados los perseguidos por la justicia).</li>
+    </ul>
+  </li><br>
+
+  <li><b>La dificultad y la exigencia del Reino</b>
+    <ul>
+      <li>El camino estrecho refleja la lucha contra el pecado, el egoísmo y la comodidad.</li>
+      <li>La salvación es don de Dios, pero pide cooperación humana.</li>
+      <li>Referencias: Mt 19,23-24 (“difícilmente entrará un rico en el Reino de los cielos”).</li>
+      <li>Paralelo: Lc 6,31 (“Como queréis que los hombres hagan con vosotros, hacedlo también vosotros”).</li>
+    </ul>
+  </li><br>
+
+  <li><b>La universalidad de la invitación y la responsabilidad personal</b>
+    <ul>
+      <li>Aunque muchos eligen el camino ancho, todos son invitados a la vida.</li>
+      <li>La salvación no es automática: requiere decisión y perseverancia.</li>
+      <li>Referencias: Mt 22,14 (“muchos son llamados, pocos escogidos”).</li>
+      <li>Paralelo: Mt 6,14-15 (perdón y responsabilidad personal en la salvación).</li>
+    </ul>
+  </li><br>
+
+  <li><b>Cristo como la puerta verdadera</b>
+    <ul>
+      <li>El acceso a la vida eterna es posible sólo en Jesús.</li>
+      <li>El camino no es una idea, sino una persona: “Yo soy la puerta… Yo soy el camino” (Jn 10,7-9; Jn 14,6).</li>
+      <li>Paralelo: Mt 5,7 (bienaventurados los misericordiosos, porque alcanzarán misericordia).</li>
+    </ul>
+  </li>
+</ul>
+ </p>
           </details>
         </li>
         <!--++++++++++++++++++++++++++++++++++++++++++ -->
@@ -1222,8 +1287,43 @@ Magisterio de la Iglesia y temas clave  <br>
           <details class="select">
             <summary>Patrística</summary>
             <p>
-              <br />
-              <br />
+<ol>
+  <li>
+    <b>San Agustín de Hipona (354–430)</b><br>
+    Comentando sobre el camino estrecho:<br>
+    «El camino que conduce a la vida es estrecho y difícil, porque en él se lucha contra las pasiones y contra el amor a este mundo, pero precisamente en esa dificultad está la medicina de nuestras almas.»<br>
+    (Sermón 306, 3)<br>
+  </li>
+
+  <li>
+    <b>San Juan Crisóstomo (347–407)</b><br> 
+    Sobre la multitud que elige el camino ancho:<br>
+    «No debemos seguir la multitud, sino la verdad; porque la verdad no siempre está con la mayoría, sino con los que caminan por la senda estrecha que Cristo nos señaló.»<br>
+    (Homilía sobre Mateo, Hom. 23,2)<br>
+  </li>
+
+  <li>
+    <b>San Gregorio Magno (540–604)</b><br>
+    Acerca de la exigencia de la puerta estrecha:<br>
+    «El camino es estrecho porque restringe los deseos; pero mientras más se renuncia a lo terreno, más se dilata el corazón en el amor de Dios.»<br>
+    (Homilías sobre los Evangelios, Hom. 37,4)<br>
+  </li>
+
+  <li>
+    <b>San Jerónimo (347–420)</b><br>
+    Enfatizando la elección personal:<br>
+    «No dijo el Señor que la puerta de la perdición sea pequeña, sino ancha; ni que la del Reino sea espaciosa, sino estrecha: para que entendamos que no por la multitud debemos juzgar la verdad, sino por el camino que conduce a la vida.»<br>
+    (Comentario al Evangelio de Mateo, 7,13-14)<br>
+  </li>
+
+  <li>
+    <b>Orígenes (184–253)</b><br>
+    Interpretando la puerta estrecha en clave espiritual:<br>
+    «La puerta estrecha es la fe en Cristo y la obediencia a sus mandamientos; por eso son pocos los que la hallan, porque pocos son los que renuncian a sí mismos para seguirlo.»<br>
+    (Comentario a Mateo, Tomo 14, nº 2)<br>
+  </li>
+</ol>
+
             </p>
           </details>
         </li>
@@ -1231,10 +1331,52 @@ Magisterio de la Iglesia y temas clave  <br>
         <li>
           <details class="select">
             <summary>Magisterio</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+          <ol>
+  <li>
+    <b>Catecismo de la Iglesia Católica (CIC 1696)</b><br>
+    «El camino de Cristo lleva a la vida; un camino contrario lleva a la perdición.<br>
+    La parábola evangélica de las dos sendas está siempre presente en la catequesis de la Iglesia.<br>
+    Indica la importancia de las decisiones morales para nuestra salvación.»<br>
+  </li>
+
+  <li>
+    <b>Catecismo de la Iglesia Católica (CIC 1036)</b><br>
+    «El anuncio de la “puerta estrecha” (Mt 7,13-14) nos invita a una vigilancia constante.<br>
+    Desde ahora debemos elegir entre la vida y la muerte (Dt 30,15-19).<br>
+    Sólo entrando por la puerta que es Cristo (Jn 10,9), llegamos a la vida eterna.»<br>
+  </li>
+
+  <li>
+    <b>Concilio Vaticano II – Lumen Gentium 48</b><br>
+    «El camino de la Iglesia es el mismo camino estrecho de su Señor.<br>
+    El pueblo de Dios avanza entre las persecuciones del mundo y los consuelos de Dios,<br>
+    anunciando la cruz y la muerte del Señor hasta que Él venga.»<br>
+  </li>
+
+  <li>
+    <b>San Juan Pablo II – Veritatis Splendor (n. 20)</b><br>
+    «Las palabras de Jesús: “Entrad por la puerta estrecha” (Mt 7,13) expresan la exigencia de una opción radical.<br>
+    La moral cristiana no se acomoda a la facilidad del camino ancho,<br>
+    sino que pide fidelidad al Evangelio incluso cuando es difícil.»<br>
+  </li>
+
+  <li>
+    <b>Benedicto XVI – Homilía (28 de agosto de 2005)</b><br>
+    «El Señor nos dice que el camino que lleva a la vida es estrecho.<br>
+    No es un camino de comodidad o de éxito humano,<br>
+    sino el camino de la cruz, de la renuncia, del amor que se entrega.<br>
+    Este es el camino verdadero de la libertad.»<br>
+  </li>
+
+  <li>
+    <b>Papa Francisco – Ángelus (21 de agosto de 2016)</b><br>
+    «Jesús nos invita a entrar por la puerta estrecha.<br>
+    No significa una puerta pequeña en dimensiones,<br>
+    sino que es la puerta del corazón de Cristo,<br>
+    la puerta de la misericordia, abierta a todos pero exigente en el amor concreto.»<br>
+  </li>
+</ol>
+
           </details>
         </li>
         <!--++++++++++++++++++++++++++++++++++++++++++ -->
