--- a/ecclesia/oracion/CastilloInterior.html
+++ b/ecclesia/oracion/CastilloInterior.html
@@ -443,7 +443,25 @@
         <!-- ****************************** -->
         <li><details class="select">
           <summary>Gratia sustentans</summary>
+            <ol>
+              <li>Morada 1 <br>
+                Ingredere hanc mansionem: ORACIÓN <br>
+                GRACIA [Inceptum Divinum]: BÚSQUEDA DEL BIEN <br>
+                Transi ad sequentem mansionem:INICIAR LA CONVERSIÓN PERMANENTE<br>
+              </li>
 
+              <li>Morada 2 <br>
+                Ingredere hanc mansionem: INICIAR LA CONVERSIÓN PERMANENTE <br>
+                GRACIA [Inceptum Divinum]: BÚSQUEDA DE CONOCIMIENTO DEL SEÑOR [LECTIO] <br>
+                Transi ad sequentem mansionem: PERSEVERANCIA <br>
+              </li>
+
+              <li>Morada 3 <br>
+                Ingredere hanc mansionem: PERSEVERANCIA <br>
+                GRACIA [Inceptum Divinum]:  BÚSQUEDA DE ORDEN Y MÉTODO<br>
+                Transi ad sequentem mansionem: HUMILDAD <br>
+              </li>
+            </ol>
           <h2>SUMMARIUM</h2> 
         <ol>
           <h3>GRATIA</h3>
