--- a/ecclesia/lectio/mateo/mateo7.html
+++ b/ecclesia/lectio/mateo/mateo7.html
@@ -1,26 +1,29 @@
 <!DOCTYPE html>
 <html lang="es">
+
   <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="../../../styles/style.css" />
-    <title>LECTIO</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="../../../styles/style.css">
+    <title>Mateo 7</title>
+    <style>
+    .cita{
+        margin-left: 2em;
+      }
+    </style>
   </head>
+
   <body>
     <p id="alInicio" class="principio"></p>
     <header>
       <div class="container">
-        <p class="logo">CRISTO SALVADOR</p>
-        <!--++++++++++++++++++++++++++++++++++++++++++ -->
-        <a href="#alInicio">
-          <img src="../../../media/ESCUDOCARM.png" alt="" class="logoC" />
-        </a>
-        <a href="./index.html" class="nombre">INICIO</a>
+        <p class="logo"> CRISTO SALVADOR</p>
+        <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
+        <a href="#alInicio"><img src="../../../media/ESCUDOCARM.png" alt="" class="logoC"></a>
+        <a href="./index.html" class="nombre">INICIO </a>
       </div>
-    </header>
-    <br />
-    <br />
-    <!--++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++++ -->
+    </header> <br><br>
+    <!-- ++++++++++++++++++++++++++++++++++++++++++++++++++ -->
     <h1 class="init">Mateo 7</h1>
     <h3 class="cita">
       "No aceptes como Verdad lo que no proviene del Amor,
@@ -1383,10 +1386,15 @@ En resumen: este pasaje de Mateo no está aislado, sino que forma parte de un te
         <li>
           <details class="select">
             <summary>Metanoia</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+          <ol>
+            <li>Resalta la libertad y elección de la persona</li>
+            <li>Y que solo hay 2 caminos, el que me une a Dios y el que no</li>
+            <li>El seguimiento al Señor exige renuncia a uno mismo y radicalidad Mt 16,24 Mt 5, 10-12</li>
+            <li>Requiere Perseverancia y fidelidad a la verdad</li>
+            <li>La búsqueda de Dios, aunque sea simple implica hacer siempre lo necesario y correcto</li>
+            <li>Es el camino de la Cruz</li>
+       
+          </ol>
           </details>
         </li>
         <!--++++++++++++++++++++++++++++++++++++++++++ -->
@@ -1439,60 +1447,193 @@ En resumen: este pasaje de Mateo no está aislado, sino que forma parte de un te
         <li>
           <details class="select">
             <summary>Variaciones en el Texto</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+          <p>
+
+<br>Biblia de Jerusalén (BJ):<br>
+Guardaos de los falsos profetas, que vienen a vosotros con vestidos de oveja, pero por dentro son lobos rapaces. <br>
+Por sus frutos los conoceréis. ¿Acaso se cosechan uvas de los espinos o higos de los abrojos? <br>
+Así, todo árbol bueno da frutos buenos, pero el árbol malo da frutos malos. <br>
+Un árbol bueno no puede dar frutos malos, ni un árbol malo dar frutos buenos. <br>
+Todo árbol que no da buen fruto es cortado y arrojado al fuego. <br>
+Así que, por sus frutos los conoceréis. <br>
+
+<br>Vulgata (latín):<br>
+Attendite a falsis prophetis, qui veniunt ad vos in vestimentis ovium, intrinsecus autem sunt lupi rapaces. <br>
+A fructibus eorum cognoscetis eos. Numquid colligunt de spinis uvas, aut de tribulis ficus? <br>
+Sic omnis arbor bona fructus bonos facit; mala autem arbor fructus malos facit. <br>
+Non potest arbor bona fructus malos facere, neque arbor mala fructus bonos facere. <br>
+Omnis arbor, quae non facit fructum bonum, excidetur, et in ignem mittetur. <br>
+Igitur ex fructibus eorum cognoscetis eos. <br>
+
+<br>Nueva Versión Internacional (NVI):<br>
+Cuídense de los falsos profetas. Vienen a ustedes disfrazados de ovejas, pero por dentro son lobos feroces. <br>
+Por sus frutos los conocerán. ¿Acaso se recogen uvas de los espinos, o higos de los cardos? <br>
+Del mismo modo, todo árbol bueno da fruto bueno, pero el árbol malo da fruto malo. <br>
+Un árbol bueno no puede dar fruto malo, y un árbol malo no puede dar fruto bueno. <br>
+Todo árbol que no da buen fruto se corta y se arroja al fuego. <br>
+Así que, por sus frutos los conocerán. <br>
+
+<br>Biblia de las Américas (LBLA):<br>
+Cuídense de los falsos profetas, que vienen a ustedes con vestidos de ovejas, pero por dentro son lobos rapaces. <br>
+Por sus frutos los conocerán. ¿Acaso se recogen uvas de los espinos, o higos de los abrojos? <br>
+Así, todo árbol bueno da buenos frutos, pero el árbol malo da frutos malos. <br>
+Un árbol bueno no puede producir frutos malos, ni un árbol malo producir frutos buenos. <br>
+Todo árbol que no da buen fruto es cortado y echado al fuego. <br>
+Así que, por sus frutos los conocerán. <br>
+
+<br>Interlineal Griego-Español (traducción literal):<br>
+Guardaos de los profetas falsos, que vienen hacia vosotros con vestidos de ovejas, pero dentro son lobos rapaces. <br>
+Por los frutos de ellos los reconoceréis. ¿Acaso recogen de espinos uvas, o de abrojos higos? <br>
+Así todo árbol bueno produce frutos buenos, pero el árbol podrido produce frutos malos. <br>
+No puede el árbol bueno producir frutos malos, ni el árbol podrido producir frutos buenos. <br>
+Todo árbol que no produce fruto bueno, es cortado y echado al fuego. <br>
+Así que, por los frutos de ellos los reconoceréis. <br>
+          </p>
           </details>
         </li>
         <!--++++++++++++++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary>Paralelos</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+          <p>
+<br>Textos paralelos en los Evangelios Sinópticos:<br> <br>
+
+ <br>Lucas 6,43-45<br>: "No hay árbol bueno que dé fruto malo, ni árbol malo que dé fruto bueno. Cada árbol se conoce por su fruto; porque no se cosechan higos de los espinos, ni se vendimia uva de las zarzas..." <br>
+ <br>Mateo 12,33-35<br>: "O haced el árbol bueno y su fruto bueno, o haced el árbol malo y su fruto malo; porque por el fruto se conoce el árbol..." <br>
+
+<br>Temas paralelos en otros escritos del NT:<br> <br>
+
+ <br>Juan 15,1-8<br>: Jesús como la vid verdadera, donde se insiste en dar fruto como signo de unión con Él. <br>
+ <br>Gálatas 5,19-23<br>: Contraposición entre "obras de la carne" y "fruto del Espíritu". <br>
+ <br>Santiago 3,12<br>: "¿Acaso puede una higuera producir aceitunas, o una vid higos? Tampoco la fuente de agua salada puede dar agua dulce." <br>
+ Apo 13:11 El falso profeta al servicio de la Bestia.
+Vi luego otra Bestia que surgía de la tierra y tenía dos cuernos como de cordero, pero hablaba como una serpiente. <br>
+Apo 19:20 Pero la Bestia fue capturada, y con ella el falso profeta —el que había realizado al servicio de la Bestia los signos con que seducía a los que habían aceptado la marca de la Bestia y a los que adoraban su imagen— los dos fueron arrojados vivos al lago del fuego que arde con azufre. <br>
+Mat 24:4 Jesús les respondió: «Mirad que no os engañe nadie. <br>
+Mat 24:5 Porque vendrán muchos en mi nombre diciendo: “Yo soy el Cristo”, y engañarán a muchos. <br>
+Mat 24:11 Surgirán muchos falsos profetas, que engañarán a muchos. <br>
+Mat 24:24 Porque se levantarán falsos Cristos y falsos profetas, <br>
+2Ts 2:1 Por lo que respecta a la Venida de nuestro Señor Jesucristo y a nuestra reunión con él, os rogamos, hermanos, <br>
+2Ts 2:2 que no os dejéis alterar tan fácilmente en vuestro ánimo, ni os alarméis por alguna manifestación del Espíritu, por algunas palabras o por alguna carta presentada como nuestra, que os haga suponer que está inminente el Día del Señor. <br>
+2Ts 2:3 Que nadie os engañe de ninguna manera. <br>
+Primero tiene que venir la apostasía y manifestarse el Hombre impío, el Hijo de perdición, <br>
+Jer 23:14 Mas en los profetas de Jerusalén he observado una monstruosidad: <br>
+fornicar y proceder con falsía,<br>
+dándose la mano con los malhechores,<br>
+sin volverse cada cual de su malicia.<br>
+Se me han vuelto todos ellos cual Sodoma,<br>
+y los habitantes de la ciudad, cual Gomorra.<br>
+
+
+
+
+<br>Temas relacionados:<br> <br>
+
+ El discernimiento de los falsos profetas y maestros (cf. 2 Pedro 2,1; 1 Juan 4,1). <br>
+ La autenticidad de la fe medida por las obras (cf. Santiago 2,14-26). <br>
+ El juicio divino expresado en la imagen del árbol cortado y arrojado al fuego (cf. Mateo 3,10). <br>
+         </p>
           </details>
         </li>
         <!--++++++++++++++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary>Temas</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+<ol>
+  <li>Discernimiento espiritual: la necesidad de distinguir entre verdaderos y falsos profetas. <br></li>
+  <li>La autenticidad de la fe se manifiesta en las obras: "por sus frutos los conoceréis". <br></li>
+  <li>El contraste entre el bien y el mal: árbol bueno/frutos buenos frente a árbol malo/frutos malos. <br></li>
+  <li>La importancia de la coherencia de vida: no basta con la apariencia externa, lo interior se refleja en las obras. <br></li>
+  <li>El juicio divino: todo árbol que no da buen fruto es cortado y arrojado al fuego. <br></li>
+  <li>La comunidad cristiana como lugar de vigilancia y cuidado ante falsos maestros. <br></li>
+  <li>La centralidad de Cristo como criterio último de verdad y autenticidad. <br></li>
+</ol>
           </details>
         </li>
         <!--++++++++++++++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary>Patrística</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+         <ol>
+  <li>
+    <b>San Juan Crisóstomo (Homilía sobre Mateo, Hom. 23,2):</b><br>
+    "Cristo no dijo: por sus milagros los conoceréis, sino por sus frutos, es decir, por la vida y las costumbres. Porque muchas veces hacen milagros los falsos profetas, pero la vida no puede engañar." <br>
+  </li>
+
+  <li>
+    <b>San Agustín de Hipona (De sermone Domini in monte, II,24,79):</b><br>
+    "Por tanto, así como el árbol se conoce por el fruto, así también se conoce el hombre por sus obras. No se nos manda juzgar de otro modo, sino por los frutos de la conducta." <br>
+  </li>
+
+  <li>
+    <b>San Jerónimo (Comentario a Mateo, 7,15):</b><br>
+    "No hay cosa más peligrosa que aquellos que bajo la apariencia de piedad introducen doctrinas erróneas: semejan ovejas, pero muerden como lobos." <br>
+  </li>
+
+  <li>
+    <b>San Gregorio Magno (Hom. in Evang. 12,1):</b><br>
+    "Los falsos profetas son llamados ovejas en cuanto a la apariencia, pero lobos en cuanto a la intención. Pues con palabras dulces y humildes se presentan, pero buscan desgarrar con sus malas obras." <br>
+  </li>
+
+  <li>
+    <b>Magisterio de la Iglesia:</b><br>
+    - <i>Catecismo de la Iglesia Católica (CIC 2005):</i> "El hombre participa en la bondad divina por las virtudes, que hacen posible reconocer los frutos del Espíritu y distinguirlos de las obras de la carne." <br>
+    - <i>Dei Verbum (n. 10):</i> advierte sobre la necesidad de discernir la verdadera doctrina transmitida por la Tradición apostólica frente a interpretaciones falsas. <br>
+    - <i>Lumen Gentium (n. 12):</i> enseña que el Espíritu Santo guía al pueblo de Dios para discernir la autenticidad de los carismas, de modo semejante a lo expresado por Jesús: "por sus frutos los conoceréis". <br>
+  </li>
+</ol>
+
           </details>
         </li>
         <!--++++++++++++++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary>Magisterio</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+ <ol>
+  <li>
+    <b>Discernimiento de los falsos profetas y doctrinas erróneas:</b><br>
+    - <i>Dei Verbum, 10:</i> "El oficio de interpretar auténticamente la Palabra de Dios, escrita o transmitida, ha sido encomendado sólo al Magisterio vivo de la Iglesia..."<br>
+    - <i>Catecismo de la Iglesia Católica (CIC 85):</i> "El oficio de interpretar auténticamente la Palabra de Dios ha sido confiado al único Magisterio de la Iglesia..."<br>
+  </li>
+
+  <li>
+    <b>Por sus frutos los conoceréis (autenticidad de la vida cristiana):</b><br>
+    - <i>CIC 2005:</i> "Las virtudes permiten a cada uno de manifestar los frutos del Espíritu... y distinguirlos de las obras de la carne."<br>
+    - <i>Lumen Gentium, 12:</i> "El Espíritu Santo distribuye gracias especiales entre los fieles... los carismas deben ser juzgados por sus frutos, según la prudencia y la guía de la Iglesia."<br>
+  </li>
+
+  <li>
+    <b>El peligro de los falsos maestros:</b><br>
+    - <i>Dominus Iesus, 9:</i> "La verdad de Jesucristo, único Salvador, no puede ser reemplazada ni puesta al mismo nivel que doctrinas humanas."<br>
+    - <i>CIC 675:</i> "Antes de la venida de Cristo, la Iglesia debe pasar por una prueba final que sacudirá la fe de muchos creyentes... mediante una impostura religiosa que ofrece a los hombres una solución aparente a sus problemas, al precio de la apostasía."<br>
+  </li>
+
+  <li>
+    <b>El juicio y el destino del árbol que no da fruto:</b><br>
+    - <i>CIC 1032:</i> "La enseñanza de la Iglesia afirma la existencia del infierno y la posibilidad de la condenación eterna para quienes rechazan a Dios."<br>
+    - <i>Spe Salvi, 45 (Benedicto XVI):</i> "El juicio de Dios es esperanza, tanto porque es justicia como porque es gracia... pero también es advertencia contra el mal y sus frutos."<br>
+  </li>
+
+  <li>
+    <b>La misión de la Iglesia en custodiar la verdad:</b><br>
+    - <i>CIC 2032:</i> "El Magisterio de los pastores de la Iglesia en materia moral se ejerce ordinariamente en la catequesis y en la predicación, basándose siempre en los frutos de la vida cristiana."<br>
+    - <i>Lumen Gentium, 25:</i> "Los obispos, en comunión con el Papa, son los testigos de la fe auténtica y garantizan que los fieles no se desvíen tras falsos profetas."<br>
+  </li>
+</ol>
+
           </details>
         </li>
         <!--++++++++++++++++++++++++++++++++++++++++++ -->
         <li>
           <details class="select">
             <summary>Metanoia</summary>
-            <p>
-              <br />
-              <br />
-            </p>
+          <ol>
+            <li>El discernimiento, es la busqueda de la verdad</li>
+            <li>1° criterio, es por sus efectos, resultados y obras (conducta, vida y costumbres)</li>
+            <li>2° criterio, coherencia con lo que sabemos es bueno</li>
+            <li>3° Criterio, la centralidad de Cristo y su Iglesia (Biblia, Tradición y Magisterio)</li>
+           
+          </ol>
           </details>
         </li>
         <!--++++++++++++++++++++++++++++++++++++++++++ -->
@@ -1546,12 +1687,6 @@ En resumen: este pasaje de Mateo no está aislado, sino que forma parte de un te
               Mat 7:27 cayó la lluvia, vinieron los torrentes, soplaron los
               vientos, irrumpieron contra aquella casa y cayó, y fue grande su
               ruina.»
-              <br />
-
-              <br />
-
-              <br />
-              <br />
             </p>
           </details>
         </li>
